[GTK] Zooming gesture incorrectly uses scale instead of zoom https://bugs.webkit.org/show_bug.cgi?id=182174

Patch by Jan-Michael Brummer <jan.brummer@tabos.org> on 2018-01-29
Reviewed by Michael Catanzaro.

Switch zooming gesture to use zoom instead of scale function.

* UIProcess/gtk/GestureController.cpp:
(WebKit::GestureController::ZoomGesture::begin):
(WebKit::GestureController::ZoomGesture::handleZoom):

Canonical link: https://commits.webkit.org/198051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227744 268f45cc-cd09-0410-ab3c-d52691b4dbfc